--- a/templates/applications/consultant/application_list.html
+++ b/templates/applications/consultant/application_list.html
@@ -25,7 +25,7 @@
                                 <th>Student</th>
                                 <th>Program</th>
                                 <th>University</th>
-                                <th>Status</th>
+                                <th style="color: initial;">Status</th> {# Removed potential white color, set to default #}
                                 <th>Applied Date</th>
                                 <th>Action</th>
                             </tr>
