--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -50,8 +50,8 @@
                         
                         <div class="d-flex justify-content-between align-items-center mb-3">
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="rememberMe">
-                                <label class="form-check-label" for="rememberMe">Remember me</label>
+                                <!-- <input class="form-check-input" type="checkbox" id="rememberMe"> -->
+                                <!-- <label class="form-check-label" for="rememberMe">Remember me</label> -->
                             </div>
                             <a href="{% url 'accounts:password_reset' %}" class="small text-primary">Forgot password?</a>
                         </div>
