--- a/templates/applications/cancel_application.html
+++ b/templates/applications/cancel_application.html
@@ -13,11 +13,11 @@
         This action cannot be undone.
     </div>
 
-    <p>Application ID: {{ application.application_id }}</p>
+    <p>Application ID: {{ application.pk }}</p> {# Changed application_id to pk #}
     <p>Current Status: {{ application.get_status_display }}</p>
     <p>Application Date: {{ application.application_date|date:"Y-m-d" }}</p>
 
-    <form method="post" action="{% url 'applications:cancel_application' application.application_id %}">
+    <form method="post" action="{% url 'applications:cancel_application' application.pk %}"> {# Changed application_id to pk #}
         {% csrf_token %}
         <div class="mb-3">
             <label for="cancel_reason" class="form-label">Reason for Cancellation (Optional):</label>
@@ -25,7 +25,7 @@
         </div>
 
         <button type="submit" class="btn btn-danger">Confirm Cancellation</button>
-        <a href="{% url 'applications:application_detail' application.application_id %}" class="btn btn-secondary">Go Back</a>
+        <a href="{% url 'applications:application_detail' application.pk %}" class="btn btn-secondary">Go Back</a> {# Changed application_id to pk #}
     </form>
 </div>
 {% endblock %}
